# crypto-etl-pipeline

./: Makefile  README.md  pyproject.toml  requirements.txt  setup_db.py
.github/workflows/: daily_etl.yml
scripts/: run_daily.sh
src/: logging_config.py
src/config/: config.yaml
src/crypto_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/etl/: ingest_crypto.py  utils.py
src/sql/: create_table.sql
